changes these to using the java 21+ executors